--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "liveServer.settings.showOnStatusbar": false
+    "liveServer.settings.showOnStatusbar": false,
+    "liveServer.settings.port": 5501
 }
