--- a/backend/composer.json
+++ b/backend/composer.json
@@ -12,6 +12,7 @@
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^2.14.1",
         "laravel/tinker": "^2.7",
+        "linecorp/line-bot-sdk": "^3.6",
         "wildbit/swiftmailer-postmark": "^3.3"
     },
     "require-dev": {
